<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SenoActivity">

    <!-- Título -->
    <LinearLayout
        android:id="@+id/layoutprin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/lblcalculoseno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculadora_seno"
            android:textSize="24sp"
            android:textColor="#1990B9"/>
    </LinearLayout>

    <!-- Contenedor para el ángulo y los RadioButtons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layoutprin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <!-- RadioButtons para seleccionar el tipo de ángulo -->
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Gseno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:text="@string/grados_seno" />

            <RadioButton
                android:id="@+id/Rseno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:text="@string/radianes_seno" />
        </RadioGroup>

        <!-- EditText para ingresar el ángulo -->
        <EditText
            android:id="@+id/txtAseno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/angulo_seno"
            android:inputType="numberDecimal" />

        <!-- Botón para calcular el seno -->
        <Button
            android:id="@+id/btniniciarseno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular_seno"
            android:backgroundTint="#1990B9"/>

        <TextView
            android:id="@+id/lblresultadoseno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutprin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>